--- a/Shoppier/AndroidManifest.xml
+++ b/Shoppier/AndroidManifest.xml
@@ -16,11 +16,10 @@
         <activity
             android:name="net.shoppier.MainActivity"
             android:label="@string/app_name" >
-
         </activity>
         <activity
             android:name="net.shoppier.SplashActivity"
-            android:label="@string/title_activity_splash" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,7 +28,19 @@
         </activity>
         <activity
             android:name="net.shoppier.ListSelect"
-            android:label="@string/title_activity_list_select" >
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="net.shoppier.LoginActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+        </activity>
+        <activity
+            android:name="net.shoppier.GrocListActivity"
+            android:label="@string/title_activity_groc_list" >
+        </activity>
+        <activity
+            android:name="net.shoppier.AddActivity" >
         </activity>
     </application>
 
