Updated the GUI to add database connection and login funtionality

--- a/Shoppier/AndroidManifest.xml
+++ b/Shoppier/AndroidManifest.xml
@@ -43,5 +43,8 @@
             android:name="net.shoppier.AddActivity" >
         </activity>
     </application>
+    
+     
+    <uses-permission android:name="android.permission.INTERNET" /> 
 
 </manifest>
