--- a/ShoppierWeb/.htaccess
+++ b/ShoppierWeb/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine On
 
 #When using the script within a subfolder, put this path here, like /mysubfolder/
-RewriteBase /shoppier/
+RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
