--- a/Shoppier/bin/AndroidManifest.xml
+++ b/Shoppier/bin/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name="net.shoppier.MainActivity"
             android:label="@string/app_name" >
-             <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -44,6 +44,10 @@
         <activity
             android:name="net.shoppier.SingleSearableItemView"
             android:label="@string/title_activity_single_searable_item_view" >
+        </activity>
+        <activity
+            android:name="net.shoppier.DrawerActivity"
+            android:label="@string/title_activity_drawer" >
         </activity>
     </application>
 
