--- a/Shoppier/AndroidManifest.xml
+++ b/Shoppier/AndroidManifest.xml
@@ -71,6 +71,11 @@
             android:label="@string/title_EditItem"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="net.shoppier.MapLocator"
+            android:label="Find Item"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
